timed (2.41) unstable; urgency=low

  * Fixes: NB#242208 - get_attributes_by_cookie[s], get_cookies_by_attributes

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 04 Apr 2011 12:50:38 +0300

timed (2.40) unstable; urgency=low

  * Fixes: NB#226599 - moving services to the system bus

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Sun, 03 Apr 2011 18:38:38 +0200

timed (2.38) unstable; urgency=low

  * Fixes: NB#234636 - language used in ntp.h is not quite c++ :)

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Wed, 09 Mar 2011 13:00:39 +0200

timed (2.37) unstable; urgency=low

  * compiling .type files into the timed binary
  * NTP client is working, no interface yet
  * Changing log level on the fly
  * Logging in unmountable directory
  * Fixes: NB#225485 - cancel_events()
  * versioned dependencies
  * some minor stuff

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 17 Feb 2011 14:09:26 +0200

timed (2.36) unstable; urgency=low

  * new csd layer, better cellular stuff logging
  * new methods: fake_csd_time_signal, fake_csd_time_signal_now
  * new tzdata layer (needs only 3 data base files)
  * peer information asked from dbus daemon for logging
  * a better algorithm for time zone guessing by cellular info
  * ticker tool: working in background
  * two new packages: invalid-time, timed-log
  * many small fixes
  * Fixes: NB#212572 - workaround for nitz signal coming before operator
  * Fixes: NB#219005 - timezone guess doesn't work in America

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 20 Jan 2011 18:12:56 +0200

timed (2.35) unstable; urgency=low

  * Fixes: NB#208557 - sleeping in shutdown / reboot modes

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 11 Jan 2011 11:51:29 +0200

timed (2.34) unstable; urgency=low

  * Fixes: NB#211609 - timed is using too much memory for clock alarms

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 10 Jan 2011 17:42:46 +0200

timed (2.33) unstable; urgency=low
